* table layout fixes, trying to get rid of unnecessary scrollbars * increased font size again
git-svn-id: https://svn.linuxsampler.org/svn@2033 d2c4447f-3961-4fff-bec3-96d84be9abe5

--- a/web/trunk/www.linuxsampler.org/index.css
+++ b/web/trunk/www.linuxsampler.org/index.css
@@ -5,9 +5,12 @@ body    {
 #mainwindow {
 	border: 1px solid black;
 	background: white;
-	overflow: auto;
-	width: 100%;
 	padding: 0;
+	}
+
+.lsbackground {
+	overflow: hidden;
+	width: 100%;
 	}
 
 #contents {
@@ -16,7 +19,7 @@ body    {
 
 
 h2 	{
-	font-size: 11px;
+	font-size: 14.67px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: bold;
@@ -27,7 +30,7 @@ h2 	{
 	}
 
 h3 	{
-	font-size: 11px;
+	font-size: 14.67px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: bold;
@@ -48,7 +51,7 @@ img {
 	}
 
 table th {
-	font-size: 11px;
+	font-size: 14.67px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: bold;
@@ -57,7 +60,7 @@ table th {
 
 .code {
 	overflow: auto;
-	font-size: 8px;
+	font-size: 10.67px;
 	/*max-width: 300;*/
 	background-color: #F6F6F6;
 	border: 2px outset GhostWhite;
@@ -70,7 +73,7 @@ table th {
 
 .figure {
 	overflow: auto;
-	font-size: 8px;
+	font-size: 10.67px;
 	margin: 0em 3em 0em 3.2em;
 	padding-left: 3px;
 	padding-right: 3px;
@@ -79,7 +82,7 @@ table th {
 }
 
 table.default {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -91,7 +94,7 @@ table.default {
 table.decorated {
 	border: none;
 	background-color: transparent;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -103,7 +106,7 @@ table.decorated {
 td.decorated {
 	border: none;
 	background-color: #F2F2F4;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: normal;
@@ -114,7 +117,7 @@ td.decorated {
 td.decorated_header {
 	border: none;
 	background-color: #E0E0FF;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: bold;
@@ -126,7 +129,7 @@ td.decorated_header {
 	padding: 0.6em;
 	border: 1px outset White;
 	background-color: #F0F0F0;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -145,7 +148,7 @@ td.default {
 	}
 
 .formatmatrix {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -180,7 +183,7 @@ td.default {
 	}
 
 .linkstable {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -204,7 +207,7 @@ a:visited {
 }
 
 p {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -213,7 +216,7 @@ p {
 }
 
 p.default  {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -224,7 +227,7 @@ p.default  {
 p.caution  {
 	border: solid 1px;
 	background: rgb(255, 180, 180);
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -234,7 +237,7 @@ p.caution  {
 }
 
 table.pure {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	font-style: normal;
 	font-weight: normal;
@@ -242,7 +245,7 @@ table.pure {
 
 div.groupbox {
 	background: rgb(240, 240, 240);
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -254,7 +257,7 @@ div.groupbox {
 p.groupbox {
 	border: none;
 	background: rgb(240, 240, 240);
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -264,7 +267,7 @@ p.groupbox {
 	}
 
 span.default  {
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	font-style: normal;
@@ -289,7 +292,7 @@ ol.default	{
 
 li	{
 	padding: 0.2em 0.2em 0.2em 0.2em;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	}
@@ -297,7 +300,7 @@ li	{
 li.ok	{
 	list-style-image: url("gfx/okay_green.png");
 	padding: 0.2em 0.2em 0.2em 0.2em;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	}
@@ -305,7 +308,7 @@ li.ok	{
 li.false	{
 	list-style-image: url("gfx/x.png");
 	padding: 0.2em 0.2em 0.2em 0.2em;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	}
@@ -313,7 +316,7 @@ li.false	{
 li.partly	{
 	list-style-image: url("gfx/yellow_light.png");
 	padding: 0.2em 0.2em 0.2em 0.2em;
-	font-size: 10px;
+	font-size: 13.33px;
 	font-family: sans-serif,Arial,Helvetica;
 	text-align: justify;
 	}
@@ -350,7 +353,7 @@ div.news {
     border: 1px dotted;
     margin: 0.8em 2em;
     padding: 0.4em 0.4em;
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: justify;
     font-style: normal;
@@ -365,7 +368,7 @@ ul.news {
 }
 
 li.news {
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: justify;
     font-style: normal;
@@ -378,7 +381,7 @@ span.news_date {
 
 span.news_footer {
     margin: 0em 2em;
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: left;
     font-style: normal;
@@ -390,7 +393,7 @@ span.news_footer {
 /* CVS Commits section */
 
 table.cvs {
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: justify;
     font-style: normal;
@@ -405,7 +408,7 @@ table.cvs_project {
 #cvs_content {
     height: 300px;
     overflow: hidden;
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: justify;
     font-style: normal;
@@ -413,7 +416,7 @@ table.cvs_project {
 }
 
 span.cvs_footer {
-    font-size: 10px;
+    font-size: 13.33px;
     font-family: sans-serif,Arial,Helvetica;
     text-align: justify;
     font-style: normal;
